--- a/estilos/pag1.css
+++ b/estilos/pag1.css
@@ -138,7 +138,7 @@ footer{
     font-weight: bolder;
 }
 
-@media (max-width: 600px){
+@media (max-width: 620px){
     .isaque div{
         display: block;
     }
@@ -155,5 +155,15 @@ footer{
     .mini2 p{
         margin-bottom: 20px;
     }
+    .flex img{
+        width: 350px;
+        text-align: center;
+    }
+    .flex video{
+        width: 350px;
+        text-align: center;
+        margin-left: 20px;
+    }
+
 
 }
