--- a/estilos/pag2.css
+++ b/estilos/pag2.css
@@ -82,3 +82,11 @@ footer{
     font-family: Arial, Helvetica, sans-serif;
     font-weight: bolder;
 }
+
+@media (max-width: 620px){
+    section img{
+        width: 380px;
+    }
+
+
+}
