--- a/estilos/pag3.css
+++ b/estilos/pag3.css
@@ -81,3 +81,11 @@ footer{
     font-family: Arial, Helvetica, sans-serif;
     font-weight: bolder;
 }
+
+@media (max-width: 620px){
+    section video{
+        width: 380px;
+    }
+
+
+}
