--- a/estilos/pag4.css
+++ b/estilos/pag4.css
@@ -104,3 +104,8 @@ footer{
     font-family: Arial, Helvetica, sans-serif;
     font-weight: bolder;
 }
+@media (max-width: 620px){
+    form div{
+        width: 300px;
+    }
+}
